dist/1.0/bin/sample/retrieveUnpackaged/objects/Billing_Accounts__c.object
<CustomObject>
    <description>Billing Account object; contains information related to corresponding object in Billing System</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Relation to Account, that given Billing Account belongs to</description>
        <inlineHelpText>Relation to Account, that given Billing Account belongs to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apartment_No__c</fullName>
        <description>Apartment Number, that is part of Invoicing Address</description>
        <inlineHelpText>Apartment Number, that is part of Invoicing Address</inlineHelpText>
        <label>Apartment No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_From__c</fullName>
        <description>Balance for Billing Account for date specified in From Date</description>
        <inlineHelpText>Balance for Billing Account for date specified in From Date</inlineHelpText>
        <label>Balance From</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_To__c</fullName>
        <description>Balance for Billing Account for date specified in To Date</description>
        <inlineHelpText>Balance for Billing Account for date specified in To Date</inlineHelpText>
        <label>Balance To</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <description>Current Balance of Billing Account (should be updated periodicaly by Billing System)</description>
        <inlineHelpText>Current Balance of Billing Account (should be updated periodicaly by Billing System)</inlineHelpText>
        <label>Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <description>Name of the Bank that owns Bank Account provided for Directc Debit</description>
        <inlineHelpText>Name of the Bank that owns Bank Account provided for Directc Debit</inlineHelpText>
        <label>Bank Name</label>
        <referenceTo>Bank_Data__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Group__c</fullName>
        <description>Bank Account Group - value for Billing System calculated based on Debtor Group</description>
        <formula>IF( ISPICKVAL(Debtor_Group__c, &apos;&apos;) , &apos;&apos;, IF(ISPICKVAL(Debtor_Group__c, &apos;0&apos;), &apos;RED&apos;, IF(ISPICKVAL(Debtor_Group__c, &apos;30&apos;), &apos;GREEN&apos;, &apos;BLUE&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Bank Account Group - value for Billing System calculated based on Debtor Group</inlineHelpText>
        <label>Bank Account Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number_GTS__c</fullName>
        <description>Number of Bank Account created for Customer for payments</description>
        <inlineHelpText>Number of Bank Account created for Customer for payments</inlineHelpText>
        <label>Bank Account Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>Number of Customer&apos;s Bank Account, that should be used in case of Direct Debit</description>
        <inlineHelpText>Number of Customer&apos;s Bank Account, that should be used in case of Direct Debit</inlineHelpText>
        <label>Bank Account Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <description>Code of the Bank for selected Bank Name</description>
        <formula>BankName__r.Bank_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Code of the Bank for selected Bank Name</inlineHelpText>
        <label>Bank Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_From__c</fullName>
        <description>Country specific field, used only by GTS Hungary. Specifies the system, where service should be billed.</description>
        <inlineHelpText>Country specific field, used only by GTS Hungary. Specifies the system, where service should be billed.</inlineHelpText>
        <label>Billed From</label>
        <picklist>
            <picklistValues>
                <fullName>GTSHU ECHO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GTSHU SCALA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Account_ID__c</fullName>
        <description>ID of Billing Account in Billing System</description>
        <inlineHelpText>ID of Billing Account in Billing System</inlineHelpText>
        <label>Billing Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Name__c</fullName>
        <description>Descriptive Name of Billing Account</description>
        <inlineHelpText>Descriptive Name of Billing Account</inlineHelpText>
        <label>Billing Account Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Type__c</fullName>
        <description>Type of Billing Account; this information will be sent to Billing System</description>
        <inlineHelpText>Type of Billing Account; this information will be sent to Billing System</inlineHelpText>
        <label>Billing Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <description>Email Address for Detailed Billing</description>
        <inlineHelpText>Email Address for Detailed Billing</inlineHelpText>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_period__c</fullName>
        <description>Indicates how often Invoice should be issued for given Billing Account</description>
        <inlineHelpText>Indicates how often Invoice should be issued for given Billing Account</inlineHelpText>
        <label>Billing period</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Block__c</fullName>
        <description>Building Number or Name; part of Invoicing Address</description>
        <inlineHelpText>Building Number or Name; part of Invoicing Address</inlineHelpText>
        <label>Building/Block</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit Dimension for given Billing Account (used for revenue allocation)</description>
        <inlineHelpText>Business Unit Dimension for given Billing Account (used for revenue allocation)</inlineHelpText>
        <label>Business Unit</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_in_Court__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Check. Indicates if there is a case in court against this Customer</description>
        <inlineHelpText>Credit Check. Indicates if there is a case in court against this Customer</inlineHelpText>
        <label>Case in Court</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cession_of_Receivables__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit Check. Indicates if there was cession of receivables for given Billing Account</description>
        <inlineHelpText>Credit Check. Indicates if there was cession of receivables for given Billing Account</inlineHelpText>
        <label>Cession of Receivables</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City - Part of Invoicing Address</description>
        <inlineHelpText>City - Part of Invoicing Address</inlineHelpText>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_VAT__c</fullName>
        <description>VAT Class of Customer; information sent to Billing System</description>
        <inlineHelpText>VAT Class of Customer; information sent to Billing System</inlineHelpText>
        <label>Class VAT</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Billing Accounts (Class VAT)</relationshipLabel>
        <relationshipName>Billing_Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Email__c</fullName>
        <description>Specifies email(s) that should be used for sending reminders in Colleaction process</description>
        <inlineHelpText>Specifies email(s) that should be used for sending reminders in Colleaction process</inlineHelpText>
        <label>Collection Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Profile__c</fullName>
        <description>Customer&apos;s Collection Profile that will be used in Collection Process</description>
        <inlineHelpText>Customer&apos;s Collection Profile that will be used in Collection Process</inlineHelpText>
        <label>Collection Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Profile 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Comment for any information related to this Billing Account</description>
        <inlineHelpText>Comment for any information related to this Billing Account</inlineHelpText>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_registration__c</fullName>
        <description>Registration type for the Customer</description>
        <inlineHelpText>Registration type for the Customer</inlineHelpText>
        <label>Company registration</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of Invoicing Address</description>
        <inlineHelpText>Country of Invoicing Address</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Billing Account has already been created in Billing System</description>
        <inlineHelpText>Indicates if Billing Account has already been created in Billing System</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Formula__c</fullName>
        <description>Currency of Billing Account (formula, that is presented in View mode)</description>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <inlineHelpText>Currency of Billing Account</inlineHelpText>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency of Billing Account</description>
        <formula>TEXT( CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Currency of Billing Account</inlineHelpText>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Class__c</fullName>
        <description>Classification of Customer used by Billing System</description>
        <inlineHelpText>Classification of Customer used by Billing System</inlineHelpText>
        <label>Customer Class</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Billing Accounts (Customer Class)</relationshipLabel>
        <relationshipName>Billing_Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_From_Request__c</fullName>
        <description>This field is used for custom section &quot;Billing Documents Request&quot;. - CECOLSVI-213</description>
        <inlineHelpText>Date From Request</inlineHelpText>
        <label>Date From Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <description>Date from which billing Documents were retrieved</description>
        <inlineHelpText>Date from which billing Documents were retrieved</inlineHelpText>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_To_Request__c</fullName>
        <description>This field is used for custom section &quot;Billing Documents Request&quot;. - CECOLSVI-213</description>
        <inlineHelpText>Date To Request</inlineHelpText>
        <label>Date To Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_To__c</fullName>
        <description>Date to which billing Documents were retrieved</description>
        <inlineHelpText>Date to which billing Documents were retrieved</inlineHelpText>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debt_Collection_Process__c</fullName>
        <description>Information about current step in Debt Collection Process</description>
        <inlineHelpText>Information about current step in Debt Collection Process</inlineHelpText>
        <label>Debt Collection Process</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debtor_Group__c</fullName>
        <description>ID of Debtor Group; Information for Billing System</description>
        <inlineHelpText>ID of Debtor Group; Information for Billing System</inlineHelpText>
        <label>Debtor Group</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desynchronization_Time__c</fullName>
        <description>Date and Time when Account was desynchronized</description>
        <inlineHelpText>Date and Time when Account was desynchronized</inlineHelpText>
        <label>Desynchronization Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Desynchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates, that Billing Account data is desynchronized (data between SFDC and Billing System)</description>
        <inlineHelpText>Indicates, that Billing Account data is desynchronized (data between SFDC and Billing System)</inlineHelpText>
        <label>Desynchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detailed_Billing_Type__c</fullName>
        <description>Indicates if Detailed Billing should be delivered by Email or in Printed version</description>
        <inlineHelpText>Indicates if Detailed Billing should be delivered by Email or in Printed version</inlineHelpText>
        <label>Detailed Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_debit_mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Direct Debit Mandate was granted</description>
        <inlineHelpText>Indicates if Direct Debit Mandate was granted</inlineHelpText>
        <label>Direct debit mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_desynchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if any change on BA should trigger resynchronization.</description>
        <inlineHelpText>Determines if any change on BA should trigger resynchronization.</inlineHelpText>
        <label>Do_not_desynchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_To_Limit__c</fullName>
        <defaultValue>14</defaultValue>
        <description>Maturity of payment (number of days) for generated Invoices</description>
        <inlineHelpText>Maturity of payment (number of days) for generated Invoices</inlineHelpText>
        <label>Maturity of Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Method__c</fullName>
        <description>Indicates what exchange rates should be used</description>
        <inlineHelpText>Indicates what exchange rates should be used</inlineHelpText>
        <label>Exchange Rate Method</label>
        <picklist>
            <picklistValues>
                <fullName>Rates from Previous Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Status_Icon__c</fullName>
        <description>Graphical Indicator of Financial Status</description>
        <formula>IF( ISBLANK(Financial_Status__c), &apos;&apos;, IF( OR( Financial_Status__r.Value__c = &apos;CS1&apos;, Financial_Status__r.Value__c = &apos;CS2&apos;, Financial_Status__r.Value__c = &apos;CS3&apos;, Financial_Status__r.Value__c = &apos;CS4&apos;, Financial_Status__r.Value__c = &apos;CS5&apos;, Financial_Status__r.Value__c = &apos;KF&apos;, Financial_Status__r.Value__c = &apos;NP&apos;), IMAGE(&apos;https://emea.salesforce.com/servlet/servlet.ImageServer?id=01520000000sxut&amp;oid=00D200000008d5u&amp;lastMod=1288005668000&apos;, &apos;Financial Status&apos;), IMAGE(&apos;https://emea.salesforce.com/servlet/servlet.ImageServer?id=01520000000vDSD&amp;oid=00D200000008d5u&amp;lastMod=1288005037000&apos;, &apos;Financial Status&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Graphical Indicator of Financial Status</inlineHelpText>
        <label>Financial Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Status__c</fullName>
        <description>Financial Status for given Billing Account (indicates if there are any payment problems)</description>
        <inlineHelpText>Financial Status for given Billing Account (indicates if there are any payment problems)</inlineHelpText>
        <label>Financial Status</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Billing Accounts (Financial Status)</relationshipLabel>
        <relationshipName>Billing_Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>Floor number - Part of Invoicing Address</description>
        <inlineHelpText>Floor number - Part of Invoicing Address</inlineHelpText>
        <label>Floor</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <description>International Bank Account Number for Direct Debit</description>
        <inlineHelpText>International Bank Account Number for Direct Debit</inlineHelpText>
        <label>IBAN</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <description>Identification Number from Account</description>
        <formula>Account__r.Tax_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identification Number from Account</inlineHelpText>
        <label>ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Number__c</fullName>
        <description>Identification Number from Account</description>
        <formula>Account__r.Tax_Id__c</formula>
        <inlineHelpText>Identification Number from Account</inlineHelpText>
        <label>Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_account__c</fullName>
        <description>Information about Income Account</description>
        <inlineHelpText>Information about Income Account</inlineHelpText>
        <label>Income account</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Timestamp__c</fullName>
        <description>Indicates date and time when last synchronization with Billing System happened</description>
        <inlineHelpText>Indicates date and time when last synchronization with Billing System happened</inlineHelpText>
        <label>Integration Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InvoiceDelivery__c</fullName>
        <description>Invoice Delivery Method</description>
        <inlineHelpText>Invoice Delivery Method</inlineHelpText>
        <label>Invoice Delivery</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Billing Accounts (Invoice Delivery)</relationshipLabel>
        <relationshipName>Billing_Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceLanguage__c</fullName>
        <description>Language used in Invoice Document</description>
        <inlineHelpText>Language used in Invoice Document</inlineHelpText>
        <label>Invoice Language</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Billing Accounts (Invoice Language)</relationshipLabel>
        <relationshipName>Billing_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceLayout__c</fullName>
        <description>Invoice Document Layout Type</description>
        <inlineHelpText>Invoice Document Layout Type</inlineHelpText>
        <label>Invoice Layout</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Billing Accounts (Invoice Layout)</relationshipLabel>
        <relationshipName>Billing_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoicePhase__c</fullName>
        <description>Invoice Phase - Information for Billing Account calculated based on Debtor Group</description>
        <formula>IF( ISPICKVAL(Debtor_Group__c, &apos;&apos;) , &apos;&apos;, IF(ISPICKVAL(Debtor_Group__c, &apos;3&apos;), &apos;1&apos;,IF(ISPICKVAL(Debtor_Group__c, &apos;30&apos;), &apos;10&apos;, IF(ISPICKVAL(Debtor_Group__c, &apos;2&apos;), &apos;2&apos;, IF(ISPICKVAL(Debtor_Group__c,&apos;90&apos;),&apos;90&apos;,&apos;3&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invoice Phase - Information for Billing Account calculated based on Debtor Group</inlineHelpText>
        <label>Invoice Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Additional_Info__c</fullName>
        <description>Additional Information that should be visible on invoice</description>
        <inlineHelpText>Additional Information that should be visible on invoice</inlineHelpText>
        <label>Invoice Additional Info</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Email2__c</fullName>
        <description>Backup Email Address for Invoice Delivery type set to Email</description>
        <inlineHelpText>Backup Email Address for Invoice Delivery type set to Email</inlineHelpText>
        <label>Invoice Email (Backup)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Email__c</fullName>
        <description>Email Address for Invoice Delivery type set to Email</description>
        <inlineHelpText>Email Address for Invoice Delivery type set to Email</inlineHelpText>
        <label>Invoice Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Recipient__c</fullName>
        <description>PL Specific - Name of Invoice Recipient</description>
        <inlineHelpText>PL Specific - Name of Invoice Recipient</inlineHelpText>
        <label>Invoice Recipient</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoices_Total__c</fullName>
        <description>Total Amount of Invoices retrieved for Billing Account</description>
        <inlineHelpText>Total Amount of Invoices retrieved for Billing Account</inlineHelpText>
        <label>Invoices Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoicing_Day__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Day of Month when Invoice should be generated</description>
        <inlineHelpText>Day of Month when Invoice should be generated</inlineHelpText>
        <label>Invoicing Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoicing_address__c</fullName>
        <description>Invoicing Address for Billing Account</description>
        <inlineHelpText>Invoicing Address for Billing Account</inlineHelpText>
        <label>Invoicing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Billing Accounts (Invoicing address)</relationshipLabel>
        <relationshipName>Billing_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Refresh__c</fullName>
        <description>Date &amp; Time when last request for Billing Documents was done</description>
        <inlineHelpText>Date &amp; Time when last request for Billing Documents was done</inlineHelpText>
        <label>Last Refresh</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <description>PL Specific - Indicates which Legal Entity of GTS should be used for this Billing Account</description>
        <inlineHelpText>PL Specific - Indicates which Legal Entity of GTS should be used for this Billing Account</inlineHelpText>
        <label>Legal Entity</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <description>Amount Limit for Direct Debit</description>
        <inlineHelpText>Amount Limit for Direct Debit</inlineHelpText>
        <label>Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_1__c</fullName>
        <description>1st line of Invoicing Address extension, that should be printed on the invoice</description>
        <inlineHelpText>1st line of Invoicing Address extension, that should be printed on the invoice</inlineHelpText>
        <label>1st Line</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_2__c</fullName>
        <description>2nd line of Invoicing Address extension, that should be printed on the invoice</description>
        <inlineHelpText>2nd line of Invoicing Address extension, that should be printed on the invoice</inlineHelpText>
        <label>2nd Line</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Type__c</fullName>
        <description>Indicates if Maturity of Payment should be counted from Invoicing Day or from Invoice Delivery</description>
        <inlineHelpText>Indicates if Maturity of Payment should be counted from Invoicing Day or from Invoice Delivery</inlineHelpText>
        <label>Maturity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Invoicing Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overdue_Balance__c</fullName>
        <description>Amount of current overdue payments</description>
        <inlineHelpText>Amount of current overdue payments</inlineHelpText>
        <label>Overdue Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Billing_Account__c</fullName>
        <description>Parent Billing Account (allows building structure of Billing Accounts)</description>
        <inlineHelpText>Parent Billing Account (allows building structure of Billing Accounts)</inlineHelpText>
        <label>Parent Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Related billing accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Partner selling to customer and which is entitled to sales comission in relatioon to this Billing Account</description>
        <inlineHelpText>Partner selling to customer and which is entitled to sales comission in relatioon to this Billing Account</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Accounts (Partner Account)</relationshipLabel>
        <relationshipName>Billing_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Code__c</fullName>
        <description>Displays Partner Code stored on Partner Account related to this BA</description>
        <formula>Partner_Account__r.Sales_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Partner Code stored on Partner Account related to this BA</inlineHelpText>
        <label>Partner Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <description>Invoice Payment Method Type</description>
        <inlineHelpText>Invoice Payment Method Type</inlineHelpText>
        <label>Payment Method</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Billing Accounts (Payment Method)</relationshipLabel>
        <relationshipName>Billing_Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payments_Total__c</fullName>
        <description>Total Amount of Payments for retrieved Invoices</description>
        <inlineHelpText>Total Amount of Payments for retrieved Invoices</inlineHelpText>
        <label>Payments Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal Code - Part of Invoicing Address</description>
        <inlineHelpText>Postal Code - Part of Invoicing Address</inlineHelpText>
        <label>Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <description>Price List that should be used for this Billing Account - information for Billing System</description>
        <inlineHelpText>Price List that should be used for this Billing Account - information for Billing System</inlineHelpText>
        <label>Price List</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>